--- a/themes/perevozkin/sass/_bid-item-detail.scss
+++ b/themes/perevozkin/sass/_bid-item-detail.scss
@@ -112,7 +112,7 @@
 .cargo_foto_detail {
 	@extend .cargo_foto;
 	
-	left: -5px;
+	left: 0;
 }
 
 .bid-detail-cargo-listitem-cat-2:before {
@@ -133,7 +133,7 @@
 }
 
 .bid-detail-cargo-listitem-comment {
-	margin-left: -45px;
+	margin-left: -60px;
 }
 
 .bid-detail-notice-blue {
