--- a/themes/perevozkin/sass/_common.scss
+++ b/themes/perevozkin/sass/_common.scss
@@ -845,3 +845,5 @@ button.close {
 .ui-datepicker {
 	z-index: 100 !important;
 }
+
+.header-row2 .questions a{text-decoration:none;color:inherit;cursor:default;}
