--- a/themes/perevozkin/sass/_my-documents.scss
+++ b/themes/perevozkin/sass/_my-documents.scss
@@ -15,6 +15,7 @@
     
     .popup-info {
         background-color: #dd973d;
+//		position: relative;
 //        padding: 10px;
         
 //        margin-top: 20px;
